--- a/src/pi_puck_base/package.xml
+++ b/src/pi_puck_base/package.xml
@@ -7,13 +7,13 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="jma542@todo.todo">jma542</maintainer>
+  <maintainer email="jma542@york.ac.uk">Jacob Allen</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
+  <license>BSD 3-Clause</license>
 
 
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
