--- a/src/pi_puck_proximity/package.xml
+++ b/src/pi_puck_proximity/package.xml
@@ -1,25 +1,25 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>pi_puck_ir</name>
+  <name>pi_puck_proximity</name>
   <version>0.0.0</version>
-  <description>The pi_puck_ir package</description>
+  <description>The pi_puck_proximity package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="jma542@todo.todo">jma542</maintainer>
+  <maintainer email="jma542@york.ac.uk">Jacob Allen</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
+  <license>BSD 3-Clause</license>
 
 
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/pi_puck_ir</url> -->
+  <!-- <url type="website">http://wiki.ros.org/pi_puck_proximity</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
