--- a/nav/local_costmap_params.yaml
+++ b/nav/local_costmap_params.yaml
@@ -1,7 +1,7 @@
 local_costmap:
-    global_frame: map
+    global_frame: odom
     robot_base_frame: pi_puck/base_link
-    update_frequency: 5.0
+    update_frequency: 3
     publish_frequency: 2.0
     static_map: false
     rolling_window: true
