--- a/nav/costmap_common_params.yaml
+++ b/nav/costmap_common_params.yaml
@@ -9,8 +9,8 @@ observation_sources: tof_sensor_0 tof_sensor_1 tof_sensor_2 tof_sensor_3 tof_sen
 tof_sensor_0:
     {
         sensor_frame: pi_puck/tof_sensor_0,
-        data_type: /pi_puck/interop/range_to_laser/navigation/proximity/long_range_ir/0,
-        topic: topic_name,
+        data_type: LaserScan,
+        topic: /pi_puck/interop/range_to_laser/navigation/proximity/long_range_ir/0,
         marking: true,
         clearing: true,
     }
@@ -26,7 +26,7 @@ tof_sensor_2:
     {
         sensor_frame: pi_puck/tof_sensor_2,
         data_type: LaserScan,
-        topic: topic_name,
+        topic: /pi_puck/interop/range_to_laser/navigation/proximity/long_range_ir/2,
         marking: true,
         clearing: true,
     }
@@ -34,7 +34,7 @@ tof_sensor_3:
     {
         sensor_frame: pi_puck/tof_sensor_3,
         data_type: LaserScan,
-        topic: topic_name,
+        topic: /pi_puck/interop/range_to_laser/navigation/proximity/long_range_ir/3,
         marking: true,
         clearing: true,
     }
@@ -42,7 +42,7 @@ tof_sensor_4:
     {
         sensor_frame: pi_puck/tof_sensor_4,
         data_type: LaserScan,
-        topic: topic_name,
+        topic: /pi_puck/interop/range_to_laser/navigation/proximity/long_range_ir/4,
         marking: true,
         clearing: true,
     }
@@ -50,7 +50,7 @@ tof_sensor_5:
     {
         sensor_frame: pi_puck/tof_sensor_5,
         data_type: LaserScan,
-        topic: topic_name,
+        topic: /pi_puck/interop/range_to_laser/navigation/proximity/long_range_ir/5,
         marking: true,
         clearing: true,
     }
