--- a/nav/local_costmap_params.yaml
+++ b/nav/local_costmap_params.yaml
@@ -1,5 +1,5 @@
 local_costmap:
-    global_frame: odom
+    global_frame: pi_puck/odom
     robot_base_frame: pi_puck/base_link
     update_frequency: 3
     publish_frequency: 2.0
