Update nav configuration

--- a/nav/costmap_common_params.yaml
+++ b/nav/costmap_common_params.yaml
@@ -1,10 +1,10 @@
-obstacle_range: 0.5
+obstacle_range: 0.1
 raytrace_range: 1.0
 #footprint: [[x0, y0], [x1, y1], ... [xn, yn]]
-robot_radius: 0.035
+robot_radius: 0.040
 inflation_radius: 0.05
 
-observation_sources: tof_sensor_0 tof_sensor_1 tof_sensor_2 tof_sensor_3 tof_sensor_4 tof_sensor_5
+observation_sources: tof_sensor_0 tof_sensor_1 tof_sensor_2 tof_sensor_3 tof_sensor_4 tof_sensor_5 reflectance_sensor_0 reflectance_sensor_1 reflectance_sensor_2 reflectance_sensor_3 reflectance_sensor_4 reflectance_sensor_5 reflectance_sensor_6 reflectance_sensor_7
 
 tof_sensor_0:
     {
@@ -51,6 +51,70 @@ tof_sensor_5:
         sensor_frame: pi_puck/tof_sensor_5,
         data_type: LaserScan,
         topic: /pi_puck/interop/range_to_laser/navigation/proximity/long_range_ir/5,
+        marking: true,
+        clearing: true,
+    }
+reflectance_sensor_0:
+    {
+        sensor_frame: pi_puck/reflectance_sensor_0,
+        data_type: LaserScan,
+        topic: /pi_puck/interop/range_to_laser/navigation/proximity/short_range_ir/0,
+        marking: true,
+        clearing: true,
+    }
+reflectance_sensor_1:
+    {
+        sensor_frame: pi_puck/reflectance_sensor_1,
+        data_type: LaserScan,
+        topic: /pi_puck/interop/range_to_laser/navigation/proximity/short_range_ir/1,
+        marking: true,
+        clearing: true,
+    }
+reflectance_sensor_2:
+    {
+        sensor_frame: pi_puck/reflectance_sensor_2,
+        data_type: LaserScan,
+        topic: /pi_puck/interop/range_to_laser/navigation/proximity/short_range_ir/2,
+        marking: true,
+        clearing: true,
+    }
+reflectance_sensor_3:
+    {
+        sensor_frame: pi_puck/reflectance_sensor_3,
+        data_type: LaserScan,
+        topic: /pi_puck/interop/range_to_laser/navigation/proximity/short_range_ir/3,
+        marking: true,
+        clearing: true,
+    }
+reflectance_sensor_4:
+    {
+        sensor_frame: pi_puck/reflectance_sensor_4,
+        data_type: LaserScan,
+        topic: /pi_puck/interop/range_to_laser/navigation/proximity/short_range_ir/4,
+        marking: true,
+        clearing: true,
+    }
+reflectance_sensor_5:
+    {
+        sensor_frame: pi_puck/reflectance_sensor_5,
+        data_type: LaserScan,
+        topic: /pi_puck/interop/range_to_laser/navigation/proximity/short_range_ir/5,
+        marking: true,
+        clearing: true,
+    }
+reflectance_sensor_4:
+    {
+        sensor_frame: pi_puck/reflectance_sensor_6,
+        data_type: LaserScan,
+        topic: /pi_puck/interop/range_to_laser/navigation/proximity/short_range_ir/6,
+        marking: true,
+        clearing: true,
+    }
+reflectance_sensor_5:
+    {
+        sensor_frame: pi_puck/reflectance_sensor_7,
+        data_type: LaserScan,
+        topic: /pi_puck/interop/range_to_laser/navigation/proximity/short_range_ir/7,
         marking: true,
         clearing: true,
     }
