--- a/nav/base_local_planner_params.yaml
+++ b/nav/base_local_planner_params.yaml
@@ -1,11 +1,23 @@
 TrajectoryPlannerROS:
-  max_vel_x: 0.125
-  min_vel_x: 0.02
-  max_vel_theta: 3.55
-  min_in_place_vel_theta: 0.8
+# Physical max
 
-  acc_lim_theta: 1.0
-  acc_lim_x: 0.3
-  acc_lim_y: 0.3
+#  max_vel_x: 0.125
+#  min_vel_x: 0.02
+#  max_vel_theta: 3.55
+#  min_in_place_vel_theta: 0.8
+
+#  acc_lim_theta: 1.0
+#  acc_lim_x: 0.3
+#  acc_lim_y: 0.3
+
+# Reduced max from physical max for smoother movement
+  max_vel_x: 0.06
+  min_vel_x: 0.01
+  max_vel_theta: 1.8
+  min_in_place_vel_theta: 0.3
+
+  acc_lim_theta: 0.2
+  acc_lim_x: 0.2
+  acc_lim_y: 0.2
 
   holonomic_robot: false
