--- a/nav/base_local_planner_params.yaml
+++ b/nav/base_local_planner_params.yaml
@@ -11,13 +11,14 @@ TrajectoryPlannerROS:
 #  acc_lim_y: 0.3
 
 # Reduced max from physical max for smoother movement
-  max_vel_x: 0.06
-  min_vel_x: 0.01
-  max_vel_theta: 1
-  min_in_place_vel_theta: 0.3
+  max_vel_x: 0.08
+  min_vel_x: -0.08
+  max_vel_theta: 0.5
+  min_vel_theta: -0.5
+  min_in_place_vel_theta: 0.1
 
-  acc_lim_theta: 0.2
-  acc_lim_x: 0.01
-  acc_lim_y: 0.01
+  acc_lim_theta: 0.05
+  acc_lim_x: 0.05
+  acc_lim_y: 0.05
 
   holonomic_robot: false
