--- a/nav/costmap_common_params_54.yaml
+++ b/nav/costmap_common_params_54.yaml
@@ -8,121 +8,121 @@ observation_sources: merged_range_sensors tof_sensor_0 tof_sensor_1 tof_sensor_2
 
 merged_range_sensors:
     {
-        sensor_frame: pi_puck/scan_base,
+        sensor_frame: pi_puck_54/scan_base,
         data_type: LaserScan,
-        topic: /pi_puck/interop/range_merger/scan,
+        topic: /pi_puck_54/interop/range_merger/scan,
         marking: true,
         clearing: true,
     }
 tof_sensor_0:
     {
-        sensor_frame: pi_puck/tof_sensor_0,
+        sensor_frame: pi_puck_54/tof_sensor_0,
         data_type: LaserScan,
-        topic: /pi_puck/interop/range_to_laser/navigation/proximity/long_range_ir/0,
+        topic: /pi_puck_54/interop/range_to_laser/navigation/proximity/long_range_ir/0,
         marking: true,
         clearing: true,
     }
 tof_sensor_1:
     {
-        sensor_frame: pi_puck/tof_sensor_1,
+        sensor_frame: pi_puck_54/tof_sensor_1,
         data_type: LaserScan,
-        topic: /pi_puck/interop/range_to_laser/navigation/proximity/long_range_ir/1,
+        topic: /pi_puck_54/interop/range_to_laser/navigation/proximity/long_range_ir/1,
         marking: true,
         clearing: true,
     }
 tof_sensor_2:
     {
-        sensor_frame: pi_puck/tof_sensor_2,
+        sensor_frame: pi_puck_54/tof_sensor_2,
         data_type: LaserScan,
-        topic: /pi_puck/interop/range_to_laser/navigation/proximity/long_range_ir/2,
+        topic: /pi_puck_54/interop/range_to_laser/navigation/proximity/long_range_ir/2,
         marking: true,
         clearing: true,
     }
 tof_sensor_3:
     {
-        sensor_frame: pi_puck/tof_sensor_3,
+        sensor_frame: pi_puck_54/tof_sensor_3,
         data_type: LaserScan,
-        topic: /pi_puck/interop/range_to_laser/navigation/proximity/long_range_ir/3,
+        topic: /pi_puck_54/interop/range_to_laser/navigation/proximity/long_range_ir/3,
         marking: true,
         clearing: true,
     }
 tof_sensor_4:
     {
-        sensor_frame: pi_puck/tof_sensor_4,
+        sensor_frame: pi_puck_54/tof_sensor_4,
         data_type: LaserScan,
-        topic: /pi_puck/interop/range_to_laser/navigation/proximity/long_range_ir/4,
+        topic: /pi_puck_54/interop/range_to_laser/navigation/proximity/long_range_ir/4,
         marking: true,
         clearing: true,
     }
 tof_sensor_5:
     {
-        sensor_frame: pi_puck/tof_sensor_5,
+        sensor_frame: pi_puck_54/tof_sensor_5,
         data_type: LaserScan,
-        topic: /pi_puck/interop/range_to_laser/navigation/proximity/long_range_ir/5,
+        topic: /pi_puck_54/interop/range_to_laser/navigation/proximity/long_range_ir/5,
         marking: true,
         clearing: true,
     }
 reflectance_sensor_0:
     {
-        sensor_frame: pi_puck/reflectance_sensor_0,
+        sensor_frame: pi_puck_54/reflectance_sensor_0,
         data_type: LaserScan,
-        topic: /pi_puck/interop/range_to_laser/navigation/proximity/short_range_ir/0,
+        topic: /pi_puck_54/interop/range_to_laser/navigation/proximity/short_range_ir/0,
         marking: true,
         clearing: true,
     }
 reflectance_sensor_1:
     {
-        sensor_frame: pi_puck/reflectance_sensor_1,
+        sensor_frame: pi_puck_54/reflectance_sensor_1,
         data_type: LaserScan,
-        topic: /pi_puck/interop/range_to_laser/navigation/proximity/short_range_ir/1,
+        topic: /pi_puck_54/interop/range_to_laser/navigation/proximity/short_range_ir/1,
         marking: true,
         clearing: true,
     }
 reflectance_sensor_2:
     {
-        sensor_frame: pi_puck/reflectance_sensor_2,
+        sensor_frame: pi_puck_54/reflectance_sensor_2,
         data_type: LaserScan,
-        topic: /pi_puck/interop/range_to_laser/navigation/proximity/short_range_ir/2,
+        topic: /pi_puck_54/interop/range_to_laser/navigation/proximity/short_range_ir/2,
         marking: true,
         clearing: true,
     }
 reflectance_sensor_3:
     {
-        sensor_frame: pi_puck/reflectance_sensor_3,
+        sensor_frame: pi_puck_54/reflectance_sensor_3,
         data_type: LaserScan,
-        topic: /pi_puck/interop/range_to_laser/navigation/proximity/short_range_ir/3,
+        topic: /pi_puck_54/interop/range_to_laser/navigation/proximity/short_range_ir/3,
         marking: true,
         clearing: true,
     }
 reflectance_sensor_4:
     {
-        sensor_frame: pi_puck/reflectance_sensor_4,
+        sensor_frame: pi_puck_54/reflectance_sensor_4,
         data_type: LaserScan,
-        topic: /pi_puck/interop/range_to_laser/navigation/proximity/short_range_ir/4,
+        topic: /pi_puck_54/interop/range_to_laser/navigation/proximity/short_range_ir/4,
         marking: true,
         clearing: true,
     }
 reflectance_sensor_5:
     {
-        sensor_frame: pi_puck/reflectance_sensor_5,
+        sensor_frame: pi_puck_54/reflectance_sensor_5,
         data_type: LaserScan,
-        topic: /pi_puck/interop/range_to_laser/navigation/proximity/short_range_ir/5,
+        topic: /pi_puck_54/interop/range_to_laser/navigation/proximity/short_range_ir/5,
         marking: true,
         clearing: true,
     }
 reflectance_sensor_6:
     {
-        sensor_frame: pi_puck/reflectance_sensor_6,
+        sensor_frame: pi_puck_54/reflectance_sensor_6,
         data_type: LaserScan,
-        topic: /pi_puck/interop/range_to_laser/navigation/proximity/short_range_ir/6,
+        topic: /pi_puck_54/interop/range_to_laser/navigation/proximity/short_range_ir/6,
         marking: true,
         clearing: true,
     }
 reflectance_sensor_7:
     {
-        sensor_frame: pi_puck/reflectance_sensor_7,
+        sensor_frame: pi_puck_54/reflectance_sensor_7,
         data_type: LaserScan,
-        topic: /pi_puck/interop/range_to_laser/navigation/proximity/short_range_ir/7,
+        topic: /pi_puck_54/interop/range_to_laser/navigation/proximity/short_range_ir/7,
         marking: true,
         clearing: true,
     }
