--- a/nav/global_costmap_params.yaml
+++ b/nav/global_costmap_params.yaml
@@ -1,8 +1,9 @@
 global_costmap:
-    global_frame: map
-    robot_base_frame: pi_puck/base_link
-    update_frequency: 3
+    global_frame: pi_puck_54/map
+    robot_base_frame: pi_puck_54/base_link
+    update_frequency: 3.0
     static_map: false
     origin_x: -5
     origin_y: -5
-    resolution: 0.05
+    resolution: 0.02
+    track_unknown_space: true
