--- a/nav/local_costmap_params.yaml
+++ b/nav/local_costmap_params.yaml
@@ -1,12 +1,12 @@
 local_costmap:
-    global_frame: pi_puck/odom
-    robot_base_frame: pi_puck/base_link
-    update_frequency: 3
+    global_frame: pi_puck_54/odom
+    robot_base_frame: pi_puck_54/base_link
+    update_frequency: 3.0
     publish_frequency: 2.0
     static_map: false
     rolling_window: true
-    width: 6.0
-    height: 6.0
+    width: 1.0
+    height: 1.0
     resolution: 0.02
-    origin_x: -5
-    origin_y: -5
+    origin_x: -1
+    origin_y: -1
