--- a/nav/50/base_local_planner_params.yaml
+++ b/nav/50/base_local_planner_params.yaml
@@ -11,18 +11,18 @@ TrajectoryPlannerROS:
 #  acc_lim_y: 0.3
 
 # Reduced max from physical max for smoother movement
-  max_vel_x: 0.10
+  max_vel_x: 0.1
   min_vel_x: 0.05
-  max_vel_theta: 0.5
+  max_vel_theta: 0.8
   min_vel_theta: 0.05
-  min_in_place_vel_theta: 0.05
+  min_in_place_vel_theta: 0.10
 
-  acc_lim_theta: 0.05
+  acc_lim_theta: 0.10
   acc_lim_x: 0.05
 
   sim_granularity: 0.01
-  sim_time: 2.0
+  sim_time: 1.0
 
   holonomic_robot: false
 
-  global_frame_id: pi_puck/odom
+  global_frame_id: pi_puck_50/odom
