--- a/nav/50/local_costmap_params.yaml
+++ b/nav/50/local_costmap_params.yaml
@@ -1,6 +1,6 @@
 local_costmap:
-    global_frame: pi_puck/odom
-    robot_base_frame: pi_puck/base_link
+    global_frame: pi_puck_50/odom
+    robot_base_frame: pi_puck_50/base_link
     update_frequency: 3.0
     publish_frequency: 2.0
     static_map: false
