--- a/nav/54/global_costmap_params.yaml
+++ b/nav/54/global_costmap_params.yaml
@@ -1,6 +1,6 @@
 global_costmap:
-    global_frame: pi_puck/map
-    robot_base_frame: pi_puck/base_link
+    global_frame: pi_puck_54/map
+    robot_base_frame: pi_puck_54/base_link
     update_frequency: 3.0
     static_map: false
     origin_x: -5
